Fix minor styling bugs
- Flyout behaviour in embedded-entity-/entity-reference-list now
  allow to scroll to show the last items even when overflowing the window;
  moreover the whole flyout will overlay the primary-activities component
  so that it will not be covered by this latter.

- Fix the icon centering into the embed-action buttons

--- a/pub/static/themes/whitelabel/components/dropdown/_mixins.base.scss
+++ b/pub/static/themes/whitelabel/components/dropdown/_mixins.base.scss
@@ -9,7 +9,7 @@
     flex-items: align-start;    // just on mobile?
 
     @include media-query(lap-and-up) {
-        @include flyout--popover("#{$name}");
+        @include flyout--popover("#{$name}", map-get($zindex, "overlay") + 1);
     }
 
     @include media-query(palm) {
